--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Zoom Clone using NodeJS, WebRTC and WebSocket",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "style": "npx tailwindcss -i ./src/assets/css/build.css -o ./src/public/css/style.css --minify --watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.5",
     "@babel/node": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "tailwindcss": "^3.1.4"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.4.0",
     "express": "^4.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1"
