--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/core": "^7.18.5",
     "@babel/node": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@babel/register": "^7.18.9",
+    "gulp": "^4.0.2",
     "nodemon": "^2.0.18",
     "tailwindcss": "^3.1.4"
   },
