--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/node": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/register": "^7.18.9",
+    "del": "^7.0.0",
     "gulp": "^4.0.2",
     "nodemon": "^2.0.18",
     "tailwindcss": "^3.1.4"
